feat: P5 화폐 변환(solve)
1. 남은 money에 대한 해당 화폐의 최대 개수를 구하고 갱신한다.
2. 변환 후 money를 차감한다.
3. money가 0이 될 때 까지 또는 마지막 화폐단위까지 반복한다.